--- a/custom-bs/square_config.dts
+++ b/custom-bs/square_config.dts
@@ -1,14 +1,17 @@
 <configuration>
   <service>
-    <name>SquareService</name>
-    <accessToken>EAAAAB5NkLp9Fg84Cr2h_T3Kmjq5v5R2W15YjWy9E3Bh6Zxj8bKmWQYMopmXFV73mNqMPvD7yc6aPzxVWG2qELJ7fqJQWSKFy_7YEHo9q8usBhkX4F3ub9qQTrBwvPkjdR82Xjy</accessToken>
-    <endpoint>https://connect.squareup.com/v2/</endpoint>
-  </service>
-</configuration>
-<configuration>
-  <service>
     <name>SquareServiceProduction</name>
     <accessToken>EAAAEv3yaqm2Hsd4Dvm562uXXC_vLHODjRssQJK1A55DcUmaIe53WU4jSyeoin7b</accessToken>
+    <endpoint>https://connect.squareup.com/v2/</endpoint>
+  </service>
+  <service>
+    <name>SquareServiceDevelopenmt</name>
+    <accessToken>sqOatp-xG7_yZ2LmP9qA4NvR5Ts8W</accessToken>
+    <endpoint>https://connect.squareup.com/v2/</endpoint>
+  </service>
+  <service>
+    <name>SquareService</name>
+    <accessToken>sq0csp-A1b2C3d4E5f6G7h8I9j0K1l2M3n4O5p6Q7r8S9t0UvW1X2Y3Z</accessToken>
     <endpoint>https://connect.squareup.com/v2/</endpoint>
   </service>
 </configuration>
